--- a/_publications/2024-eccv.md
+++ b/_publications/2024-eccv.md
@@ -6,5 +6,5 @@ date: 2023-10-25
 venue: 'International Joint Conference on Biometrics'
 paperurl: '/files/pdf/research/ECCV_2024.pdf'
 link: ''
-citation: 'S. Aathreya, M. Chaudhary, T. Neal, and S. Canavan, “Multimodal Context-based Continuous Authentication,” IJCB 2023.'
+citation: 'S. Aathreya and S. Canavan, “FlowCon: Out-of-Distribution Detection using Flow-Based Contrastive Learning,” ECCV 2024.'
 ---
